--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,4 @@
-/**
-* Template Name: OnePage - v4.7.0
-* Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
+
 
 /*--------------------------------------------------------------
 # General
@@ -529,6 +524,7 @@ section {
   animation-delay: 0.8s;
   margin-top: 6px;
   border: 2px solid #2487ce;
+  text-align: center;
 }
 .about .content .btn-learn-more:hover {
   background: #2487ce;
